[package]
name = "json-sync"
version = "0.1.0"
edition = "2021"
authors = ["Jax (@muxover)"]
description = "High-performance JSON synchronization for map-like structures"
license = "Apache-2.0"
repository = "https://github.com/muxover/json-sync"
documentation = "https://docs.rs/json-sync"
readme = "README.md"
keywords = ["json", "sync", "persistence", "map", "shardmap"]
categories = ["concurrency", "data-structures"]

[lib]
name = "json_sync"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "1.3", optional = true }
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros", "rt-multi-thread"] }
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
shardmap = "0.1"

[features]
default = []
binary = ["dep:bincode"]

[[bench]]
name = "benchmarks"
harness = false

