[package]
name = "json-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jax (@muxover)"]
description = "Persistent JSON-backed key-value store with pluggable map backends and configurable flush policy"
license = "Apache-2.0"
repository = "https://github.com/muxover/json-sync"
documentation = "https://docs.rs/json-sync"
readme = "README.md"
keywords = ["json", "persistence", "map", "shardmap", "key-value"]
categories = ["concurrency", "data-structures"]

[lib]
name = "json_sync"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
shardmap = "0.1"

[dev-dependencies]
shardmap = "0.1"
criterion = { version = "0.8", features = ["html_reports"] }

[[example]]
name = "basic"

[[example]]
name = "with_dashmap"
required-features = ["dashmap"]

[[example]]
name = "builder"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
dashmap = ["dep:dashmap"]

[dependencies.dashmap]
version = "6"
optional = true
